# tocenter

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
resources/: icon_source.pxm
resources/sounds/: enemy.flac  knock.flac
src/: consts.rs  main.rs  shapes.rs  utils.rs
src/ecs/: components.rs  resources.rs  systems.rs
src/scenes/: curtain.rs  game.rs  gameover.rs  menu.rs  mod.rs  pause.rs  stack.rs
